LoadBalancer/LB-SG.tf
# Security group for laod balancer and target group with prot 80, 443
resource "aws_security_group" "lb_sg" {
  name        = "allow-lb"
  description = "Allow traffic to Load Balancer"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] 
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name="lbsg"
  }
}
